--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "6.26.*",
