--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@mantine/core": "^6.0.9",
+    "@mantine/hooks": "^6.0.9",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
