remove yarn switch to npm

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "frontend-hiring-challenge",
+  "name": "aircall",
   "version": "1.0.0",
   "description": "Leap test",
   "main": "index.js",
-  "repository": "",
-  "author": "",
-  "license": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/changLiCoding/aircall.git"
+  },
+  "author": "changli",
+  "license": "ISC",
   "private": false,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
@@ -27,5 +30,9 @@
     "webpack": "4.29.*",
     "webpack-cli": "3.2.*",
     "webpack-dev-server": "3.1.*"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/changLiCoding/aircall/issues"
+  },
+  "homepage": "https://github.com/changLiCoding/aircall#readme"
 }
