--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"babel-preset-env": "1.7.0",
 		"babel-preset-react": "6.24.*",
 		"css-loader": "2.1.*",
+		"eslint": "^8.46.0",
 		"html-loader": "0.5.*",
 		"html-webpack-plugin": "3.2.*",
 		"style-loader": "0.23.*",
