--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"@reduxjs/toolkit": "^1.9.5",
 		"axios": "^1.4.0",
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-dom": "^18.1.0",
+		"react-redux": "^8.1.2"
 	},
 	"devDependencies": {
 		"babel-core": "6.26.*",
@@ -31,8 +32,12 @@
 		"babel-preset-react": "6.24.*",
 		"css-loader": "2.1.*",
 		"eslint": "^8.46.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-react": "^7.33.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"html-loader": "0.5.*",
 		"html-webpack-plugin": "3.2.*",
+		"prettier": "^2.8.8",
 		"style-loader": "0.23.*",
 		"webpack": "4.29.*",
 		"webpack-cli": "3.2.*",
