--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "private": false,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "build:css": "postcss src/input.css -o src/output.css"
+
   },
+  
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss-cli": "^11.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
@@ -24,6 +29,7 @@
     "html-loader": "0.5.*",
     "html-webpack-plugin": "3.2.*",
     "style-loader": "0.23.*",
+    "tailwindcss": "^3.4.6",
     "webpack": "4.29.*",
     "webpack-cli": "3.2.*",
     "webpack-dev-server": "3.1.*"
