--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "2.1.*",
     "html-loader": "0.5.*",
     "html-webpack-plugin": "3.2.*",
+    "react-router-dom": "^6.25.1",
     "style-loader": "0.23.*",
     "tailwindcss": "^3.4.6",
     "webpack": "4.29.*",
