--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "framer-motion": "^4.1.17",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
